# aws-robomaker-sample-application-meirorunner

./: README.md  meirorunner.template.json  roboMakerSettings.temp  ws_settings.yaml  ws_settings.yml  ws_setup.py  ws_setup.sh
robot_ws/src/meiro_runner_robot/: CMakeLists.txt  package.xml
robot_ws/src/meiro_runner_robot/launch/: bringup_RL_worker.launch  bringup_robot.launch  distributed_training.launch  evaluation.launch  local_training.launch
robot_ws/src/meiro_runner_robot/scripts/: run_turtlebot_controller.sh
robot_ws/src/rl_agent/: setup.py
robot_ws/src/rl_agent/markov/: evaluation_worker.py  rollout_worker.py  single_machine_training_worker.py
robot_ws/src/rl_agent/markov/environments/: __init__.py  meiro_runner_env.py
robot_ws/src/rl_agent/markov/presets/: meiro_runner.py
robot_ws/src/turtlebot_controller/: setup.py
robot_ws/src/turtlebot_controller/robomaker/: inference_worker.py
simulation_ws/src/meiro_runner_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/meiro_runner_simulation/launch/: create_maze_world.launch
simulation_ws/src/meiro_runner_simulation/meshes/: mazeroom.dae  mazeroom_large.dae
simulation_ws/src/meiro_runner_simulation/models/playroom/: model.sdf
simulation_ws/src/meiro_runner_simulation/models/playroom_large/: model.sdf
simulation_ws/src/meiro_runner_simulation/worlds/: maze.world  maze_large.world
templates/: app_launcher.sh.temp  app_launcher_evaluate.sh.temp  roboMakerSettings.temp
