<?xml version="1.0"?>
<package format="2">
  <name>meiro_runner_robot</name>
  <version>0.1.1</version>
  <description>
    Deployment package for the Object Tracker RoboMaker sample application on the Turtlebot3
  </description>
  
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
</package>
